--- a/font-end/package.json
+++ b/font-end/package.json
@@ -38,14 +38,17 @@
     "bootstrap": "^4.4.1",
     "date-fns": "^2.11.1",
     "font-awesome": "^4.7.0",
+    "install": "^0.13.0",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
+    "npm": "^6.14.4",
     "popper.js": "^1.16.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-draggable": "^4.2.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
+    "react-swipeable-views": "^0.13.9",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "shortid": "^2.2.15"
