--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,6 +20,7 @@
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "moment-locales-webpack-plugin": "^1.2.0",
     "node-sass": "^4.13.1",
     "rimraf": "^3.0.2",
     "sass-loader": "^8.0.2",
@@ -41,6 +42,7 @@
     "install": "^0.13.0",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
+    "moment-duration-format": "^2.3.2",
     "npm": "^6.14.4",
     "popper.js": "^1.16.1",
     "react": "^16.13.0",
