--- a/back-end/package.json
+++ b/back-end/package.json
@@ -19,9 +19,11 @@
     "moment": "^2.24.0",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.5",
+    "mongoose-unique-array": "^0.3.4",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.6",
+    "shortid": "^2.2.15",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
