--- a/front-end/package.json
+++ b/front-end/package.json
@@ -39,6 +39,7 @@
     "bootstrap": "^4.4.1",
     "date-fns": "^2.11.1",
     "font-awesome": "^4.7.0",
+    "formik": "^2.1.4",
     "install": "^0.13.0",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
@@ -54,6 +55,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "shortid": "^2.2.15",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "yup": "^0.28.3"
   }
 }
