--- a/front-end/package.json
+++ b/front-end/package.json
@@ -47,6 +47,7 @@
     "npm": "^6.14.4",
     "popper.js": "^1.16.1",
     "react": "^16.13.0",
+    "react-credit-cards": "^0.8.0",
     "react-dom": "^16.13.0",
     "react-draggable": "^4.2.0",
     "react-redux": "^7.2.0",
